# agents

./: .env  .gitignore  README.md  REFACTOR_NESTED_FUNCTIONS.md  env.example  pyproject.toml
agent-engineer/: day_01_examples.ipynb  day_01_explanation.md
agent-engineer/day_01/: day_01.py  decorator_tutorial.ipynb
agent-engineer/day_02/: rate_limiter.py  智能限流装饰器设计.md
agent-engineer/day_03/: async.md  async_generator_tutorial.ipynb  day_03.py  学习简报.md  知识图解.md
agent-engineer/day_04/: async_rag.ipynb  异步RAG生成器设计.md
agent-engineer/day_05/: LLM_API_工程化.md  执行卡片.md
agent-engineer/day_06/: cost_dashboard.py  production_agent.ipynb  设计文档.md
agent-engineer/day_07/: 学习资料.md  执行卡片.md
agent-engineer/day_08/: capability_matrix.py  coordinator.py  main.py  message_queue.py  multi_agent_system.ipynb  redis_store.py  设计文档.md
agent-engineer/day_09/: 学习资料.md  执行卡片.md
agent-engineer/day_10/: api_gateway.py  cache_service.py  monitoring_config.py  rag_service.py  企业级AI应用架构.html  企业级AI应用架构.ipynb  设计文档.md
agent-engineer/simple-agent/: deepagents_tutorial.ipynb
docs/: 0.idea.md  Agent基础知识学习计划.md  Agent项目调研.md  idea.md  index.md  stars_index_ai.md  stream-output-guide.md
examples/: README.md  github_agent_demo.py  hierarchy_examples.json  stream_demo.py
simple-agent/src/: skill_creator.py  skill_use_agent.py  util.py
skills/ai-product-manager/: SKILL.md
skills/ai-product-manager/references/: agent-boundary.md  evaluation-system.md  human-ai-workflow.md  prd-template.md  tools-guide.md  (+3 more)
skills/github-stars-indexer/: SKILL.md
skills/java-ai-learning-planner/: SKILL.md
skills/math-genius/: SKILL.md
skills/web-search/: SKILL.md
src/: util.py
src/agent/: github_agent.py  github_agent_usage.md  github_stars_agent.py  skill_creator.py  stars_index_ai.md
src/rag/: navie_rag.py
trip-planner/backend/: requirements.txt
(+15 files in other folders)
