[project]
name = "agents"
version = "0.1.0"
dependencies = [
    "requires-python>=3.11",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "langchain-openai>=1.1.7",
    "deepagents>=0.3.8",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "tavily>=1.1.0",
    "langchain-anthropic>=1.3.1",
    "langchain-deepseek>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest",
]
