[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
    "tavily>=1.1.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "deepagents>=0.3.8",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.1",
    "langchain-deepseek>=1.0.1",
    "redis>=7.1.0",
    "matplotlib>=3.10.8"
]

[dependency-groups]
dev = [
    "pytest"
]
